--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 }
 
 body{
-	background-image: url(thriving-sustainable-agriculture-landscape-wi18uv9a0mnokr2s.jpg);
+	background-image: url(./thriving-sustainable-agriculture-landscape-wi18uv9a0mnokr2s.jpg);
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: 100% 100%;
